k8s-istio-example/httproute-otherapp.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: api-route
spec:
  parentRefs:
  - kind: Gateway
    name: demo-gw
  hostnames: ["*"]
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /api
    backendRefs:
    - name: httpbin
      port: 80
